e2e/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-manager-test
  labels:
    app: kubernetes-manager-test
    test-kubernetes-manager: "true"
spec:
  tls:
  - hosts:
    - backend-some-feature-branch.yourdomain.com
  rules:
  - host: backend-some-feature-branch.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deployment
            port:
              number: 80
